# sport-prospect-grading

./: .dockerignore  .env  .env.example  .gitignore  CLASSIFICATION_STATUS.md  DIAGNOSTIC_REPORT.md  IMPLEMENTATION_CHANGE.md  MERGE_NOTES.md  MLFLOW_LOGGING.md  Makefile  PROBABLITY_STACKING_MODEL.md  PSM_PHASE1.md  README.md  cleaning-data.md  mlflow.db  mlflow_compare.db  pyproject.toml
data/nba/: nba_master.csv  nba_stats_best_season.csv  nba_stats_best_season_darko.csv  nba_stats_best_season_recovered_vorp.csv  nba_stats_best_season_vorp.csv
data/ncaa/: 2008-2009.csv  2009-2010.csv  2010-2011.csv  2011-2012.csv  2012-2013.csv  2013-2014.csv  2014-2015.csv  2015-2016.csv  2016-2017.csv  2017-2018.csv  2018-2019.csv  2019-2020.csv  2020-2021.csv  ncaa_master.csv  ncaa_stats_master.csv
data/scripts/: augment_new_seasons.py  backfill_ncaa_stats.py  backfill_profile.py  fetch_nba_stats.py  parse_ncaa_stats.py  reconcile_from_ncaa_master.py  reconcile_master.py  recover_nba_players.py  validate_recovered_players.py
docker/: Dockerfile  Dockerfile.cuda  docker-compose.gpu.yml  docker-compose.yml
notebooks/: 01_eda.ipynb
outputs/interpretability/: REPORT.md  logodds_role_z.csv  logodds_star.csv  logodds_starter.csv  logodds_survived.csv  logodds_vorp.csv  occlusion_role_z.csv  occlusion_star.csv  occlusion_starter.csv  occlusion_survived.csv  occlusion_vorp.csv  probes_role_z.csv  probes_star.csv  probes_starter.csv  probes_survived.csv  probes_vorp.csv  sentiment_correlation.csv
scripts/: check_classification_contract.py  predict_2026_multimodal.py  start_mlflow_server.sh  start_mlflow_ui.sh
src/: main.py
src/config/: config.yaml
src/data/: dataset.py  loader.py  players_list.txt  preprocessor.py
src/models/: __init__.py  classification_inference.py  classification_model.py  multimodal.py  (+8 more)
tests/: conftest.py  test_config.py  test_data_loader.py  test_evaluate.py  test_main.py  test_model_interfaces.py  test_multimodal_reporting.py  test_multimodal_text_csv.py  test_simple_text_model.py  test_splits.py
(+137 files in other folders)
